--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,6 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <liquibase-hibernate4.version>3.6</liquibase-hibernate4.version>
-    </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -78,11 +75,14 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.liquibase.ext</groupId>
-            <artifactId>liquibase-hibernate4</artifactId>
-            <version>${liquibase-hibernate4.version}</version>
+            <artifactId>liquibase-hibernate5</artifactId>
+            <version>4.22.0</version>
+            <scope>runtime</scope>
         </dependency>
+        -->
 
         <!-- OTP dependency -->
         <dependency>
